[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/backgroundBox.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Blockletter.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/audio/Tremolo-electric-guitar-music-loop-110-bpm.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/textures/twisted-logo.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/black_square.png" type="Texture" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform int pixel_size : hint_range(1, 100) = 1;

void fragment(){
	vec2 pos = UV / TEXTURE_PIXEL_SIZE;
	vec2 square = vec2(float(pixel_size), float(pixel_size));
	vec2 top_left = floor(pos / square) * square;
	vec4 total = vec4(0., 0., 0., 0.);
	for (int x = int(top_left.x); x < int(top_left.x) + pixel_size; x++){
		for (int y = int(top_left.y); y < int(top_left.y) + pixel_size; y++){
			total += texture(TEXTURE, vec2(float(x), float(y)) * TEXTURE_PIXEL_SIZE);
		}
	}
	COLOR = total / float(pixel_size * pixel_size);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/pixel_size = 1

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 3 )

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="Logo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MenuBackground" type="TextureRect" parent="Logo"]
material = SubResource( 2 )
anchor_right = 0.58
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Logo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 219.417
margin_top = -95.2957
margin_right = 422.417
margin_bottom = -29.2957
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionLabel" type="Label" parent="Logo/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "EspaÃ±ol"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="Logo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 221.305
margin_top = 7.07065
margin_right = 424.305
margin_bottom = 73.0706
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionLabel" type="Label" parent="Logo/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "English"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="Logo/Button" to="." method="_on_Spanish_pressed"]
[connection signal="pressed" from="Logo/Button2" to="." method="_on_English_pressed"]
